--- a/_posts/2017-09-01-mac_skill.md
+++ b/_posts/2017-09-01-mac_skill.md
@@ -7,8 +7,22 @@ tags: MacOS
 ---
 MacOS使用小技巧整理，持续更新
 
-### Finder始终显示用户「资料库」,打开终端，运行以下命令：
+### Finder始终显示用户「资料库」
+
+1. 打开终端，运行以下命令：
 
 ```
 chflags nohidden ~/Library/
 ```
+
+### macOS Sierra 如何打开任何来源
+
+1. 打开终端，运行以下命令：
+
+```
+sudo spctl --master-disable
+```
+
+2. 打开应用程序-系统偏好设置-安全性和隐私-通用，消失的任何来源终于出现了（默认应该勾选了）；
+
+> 如果你不喜欢用终端输入命令的方式打开任何来源选项，你也可以通过另一种方法来打开第三方应用程序： 按住Control键并点按或右键点按该app的图标，点击打开即可出现“打开”选项，是不是也很方便？大家按照自己的喜欢选择这两种方法即可在macOS Sierra下打开第三方应用。
