--- a/_posts/2017-09-01-mac_skill.md
+++ b/_posts/2017-09-01-mac_skill.md
@@ -37,3 +37,9 @@ sudo spctl --master-disable
 sudo chown -R mysql /usr/local/mysql/data
 ```
 
+
+### Finder里排序如何让文件夹优先
+
+打开Finder，选择「偏好设置」- 选择高级选项 - 勾选`按名称排序时保持文件夹在顶部`
+
+![](/images/posts/macos/finder_settings.png)
