--- a/_posts/2017-09-22-gitbook.md
+++ b/_posts/2017-09-22-gitbook.md
@@ -112,3 +112,18 @@ info: >> 1 file(s) generated
 ```
 执行完以上代码，进入书籍目录，即可看到已经转换完成的pdf文件了。
 同理将`gitbook pdf . ename.pdf`改为`gitbook mobi . ename.mobi`即可生成mobi文件。
+
+
+### 设置封面
+
+封面用于所有电子书格式，只需两张图片，将其命名为 cover.jpg和cover_small.jpg 并放在对应电子书的根目录下即可。
+
+> 好的封面应该遵守以下准则:
+> cover.jpg 的尺寸为 1800x2360 像素，cover_small.jpg 为 200x262
+> 没有边界
+> 清晰可见的书名
+> 任何重要的文字应该在小版本中可见
+
+https://github.com/progit/progit
+https://github.com/progit/progit2
+
