--- a/_posts/MacOS/2017-09-01-mac_skill.md
+++ b/_posts/MacOS/2017-09-01-mac_skill.md
@@ -29,6 +29,7 @@ sudo spctl --master-disable
 
 
 ### Mac OS X的升级或其他原因可能会导致ＭySQL启动或开机自动运行失败
+
 在ＭySQL操作面板上会提示 *Warning:The /usr/local/mysql/data directory is not owned by the ‘mysql‘ or ‘_mysql‘*
 
 只需要运行如下命令即可
@@ -43,3 +44,11 @@ sudo chown -R mysql /usr/local/mysql/data
 打开Finder，选择「偏好设置」- 选择高级选项 - 勾选`按名称排序时保持文件夹在顶部`
 
 ![](/images/posts/macos/finder_settings.png)
+
+
+### 替换mac10.12 finder图标
+
+1. 准备图标文件，用图片工具打开，⌘+A全选，⌘+c复制图片
+2. 邮件要修改文件夹，选择显示简介。
+3. 先选中简介中上面的小图标，⌘+v粘贴，图标显示已经更换，直接关掉简介就好了。
+
