--- a/_posts/开发工具/2016-11-17-go2shell.md
+++ b/_posts/开发工具/2016-11-17-go2shell.md
@@ -2,7 +2,7 @@
 layout: post
 title: Go2Shell安装和设置
 date: 2016-11-17
-categories: MacOS 开发工具
+categories: 开发工具
 tags: MacOS Go2Shell
 ---
 MacOS使用小技巧整理，持续更新
