--- a/_posts/linux/2016-12-15-linux_jdk.md
+++ b/_posts/linux/2016-12-15-linux_jdk.md
@@ -9,6 +9,8 @@ tags: JDK 服务器架设
 ### 下载jdk
 下载地址:http://www.oracle.com/technetwork/java/javase/downloads/index.html
 
+选择最下面的Java Archive > Java SE 7 > 根据系统选择下载版本
+
 ### rpm安装
 
 ```
@@ -31,7 +33,7 @@ rpm -ivh jdk-7u79-linux-x64.rpm
 # ln -s latest default
 ```
 
-### 配置环境变量
+配置环境变量
 编辑配置文件`/etc/profile`，将如下内容添加到其中
 
 ```
