--- a/_posts/linux/2017-12-06-linux_ftp.md
+++ b/_posts/linux/2017-12-06-linux_ftp.md
@@ -3,7 +3,7 @@ layout: post
 title: linux服务器架设FTP
 date: 2017-12-06
 categories: linux
-tags: FTP,服务器架设,CentOS
+tags: FTP 服务器架设 CentOS
 ---
 linux服务器架设FTP
 
@@ -53,6 +53,9 @@ local_enable=YES
 # 仅在没有pam验证版本时有用,是否检查用户有一个有效的shell来登录
 check_shell=NO
 
+# 解决登陆验证缓慢问题,跳过域名解析
+reverse_lookup_enable=NO
+
 # 设置连接超时时间（单位秒）
 idle_session_timeout=600
 
@@ -64,7 +67,12 @@ ascii_upload_enable=YES
 ascii_download_enable=YES
 
 # 限制所有的本地用户只能访问自己的目录
+# 锁定用户目录（不需锁定的用户，写入chroot_list文件）
+chroot_list_enable=YES
 chroot_local_user=YES
+chroot_list_file=/etc/vsftpd/chroot_list
+
+allow_writeable_chroot=YES
 
 # 是否允许使用ls -R等命令
 ls_recurse_enable=YES
@@ -84,7 +92,7 @@ local_root=/data/ftpdata
 
 ```
 # useradd ftpuser -s /sbin/nologin
-# password ftpuser
+# passwd ftpuser
 ```
 
 #### 编辑user_list文件，给予用户访问ftp权限
@@ -93,6 +101,15 @@ local_root=/data/ftpdata
 vi /etc/vsftpd/user_list
 ```
 在文件末尾加入ftpuser并保存
+
+#### 指定用户FTP登陆后默认根文件夹
+
+```
+vi /etc/passwd
+
+## 修改默认目录
+```
+
 
 #### 建立可访问目录并指定用户
 
@@ -213,7 +230,7 @@ a.允许匿名用户和本地用户登陆。
 b.匿名用户使用的登陆名为ftp或anonymous，口令为空；匿名用户不能离开匿名用户家目录/var/ftp,且只能下载不能上传。
 c.本地用户的登录名为本地用户名，口令为此本地用户的口令；本地用户可以在自 己家目录中进行读写操作；本地用户可以离开自家目录切换至有权限访问的其他目录，并在权限允许的情况下进行上传/下载。
     write_enable=YES
-4>写在文件/etc/vsftpd.ftpusers中的本地用户禁止登陆。
+4>写在文件/etc/vsftpd/ftpusers中的本地用户禁止登陆。
             
 2.配置文件格式：  
 vsftpd.conf 的内容非常单纯，每一行即为一项设定。若是空白行或是开头为#的一行，将会被忽略。内容的格式只有一种，如下所示
