--- a/_posts/linux/2016-12-15-linux_jdk.md
+++ b/_posts/linux/2016-12-15-linux_jdk.md
@@ -57,3 +57,25 @@ java version "1.7.0_79"
 Java(TM) SE Runtime Environment (build 1.7.0_79-b15)
 Java HotSpot(TM) 64-Bit Server VM (build 24.79-b02, mixed mode)
 ```
+
+
+###  其他
+上传rpm安装包，可通过rzsz进行上传
+
+1. 首先在服务器安装rzsz
+
+```
+# yum -y install lrzsz
+```
+
+2. 上传rpm安装包
+
+```
+# rz
+```
+
+3. 下载日志文件
+
+```
+# sz /data/logs/xxx.log
+```
