--- a/_posts/MacOS/2017-09-01-mac_skill.md
+++ b/_posts/MacOS/2017-09-01-mac_skill.md
@@ -52,3 +52,20 @@ sudo chown -R mysql /usr/local/mysql/data
 2. 邮件要修改文件夹，选择显示简介。
 3. 先选中简介中上面的小图标，⌘+v粘贴，图标显示已经更换，直接关掉简介就好了。
 
+### 清理硬盘空间大小
+
+1. 删除所有系统日志——可以节省出100MB-2GB硬盘空间
+
+```
+# cd /private/var/log 
+# ls /private/var/log //查看文件后自行考虑是否删除，删除哪些
+# sudo rm -rf /private/var/log/*
+```
+
+2. 清除缓存文件——可以节省1GB-10GB硬盘空间
+
+```
+# cd ~/Library/Caches/
+# ls ~/Library/Caches/ //查看文件后自行考虑是否删除，删除哪些
+# rm -rf ~/Library/Caches/*
+```
