--- a/_posts/2017-09-22-gitbook.md
+++ b/_posts/2017-09-22-gitbook.md
@@ -30,7 +30,7 @@ GitBook version: 3.2.3
 
 下载地址：[GitBook Editor](https://www.gitbook.com/editor/)
 
-安装了Gitbook桌面端之后，你可以在客户端看见gitbook上已有的书籍，也可进行新建一本书籍。创建书籍一般在~/GitBook/Library/目录下
+安装了Gitbook桌面端之后，你可以在客户端看见gitbook上已有的书籍，也可进行新建一本书籍。创建书籍一般在`~/GitBook/Library/`目录下
 
 
 ### 创建电子书
