--- a/_posts/linux/2017-12-06-linux_ftp.md
+++ b/_posts/linux/2017-12-06-linux_ftp.md
@@ -84,6 +84,12 @@ local_root=/data/ftpdata
 
 # 解决登陆验证缓慢问题,跳过域名解析
 reverse_lookup_enable=NO
+
+# 采用被动模式
+pasv_enable=YES
+pasv_promiscuous=YES
+pasv_min_port=30000
+pasv_max_port=30010
 ```
 
 
@@ -107,6 +113,7 @@ vi /etc/vsftpd/user_list
 vi /etc/passwd
 
 ## 修改默认目录
+ftpuser:x:1003:1003::/data/ftpdata:/sbin/nologin
 ```
 
 
