更新文章-mac安装redis

--- a/_posts/技术开发/2019-11-12-mac_redis.md
+++ b/_posts/技术开发/2019-11-12-mac_redis.md
@@ -2,7 +2,7 @@
 layout: post
 title: MacBook安装使用redis
 date: 2019-11-12
-categories: 技术开发
+categories: 技术开发 MacOS
 tags: Redis
 ---
 MacBook安装使用redis
@@ -69,15 +69,15 @@ git clone --recursive https://github.com/uglide/RedisDesktopManager rdm && cd ./
 brew install qt
 brew cask install qt-creator
 ```
-然后在 Qt Creator 里改一下 Qt Versions的坑
+然后在 Qt Creator 里改一下 Qt Versions
 
-1.偏好设置-Kits-Qt Versions
+- 偏好设置-Kits-Qt Versions
 
-添加路径/usr/local/Cellar/qt/5.13.2/bin/qmake
+添加路径/usr/local/Cellar/qt/5.13.2/bin/qmake(此为刚刚安装的qt路径)
 
 ![](/images/posts/dev/qt_setting1.png)
 
-2.偏好设置-Kits-构建套件(Kit)
+- 偏好设置-Kits-构建套件(Kit)
 
 Qt版本-设置为Qt 5.13.2,把编译器C和C++全部改为Clang
 
@@ -107,15 +107,15 @@ $ brew link python
 
 #### 启动 QT
 
-双击打开 src 下的rdm.pro
+双击打开(刚git clone下来的redis客户端源码的src目录下)rdm.pro
 
-选择项目展开 desktop->build 选择 release 等待运行的三角变绿,点击运行工程
+选择项目展开 desktop->build 选择 release 等待(左下角)运行的三角变绿,点击运行工程
 
 ![](/images/posts/dev/qt_build.png)
 
 编译后会直接启动RedisDesktopManager应用,但是不会生成app文件,只在bin/osx/debug下生成了一个可执行程序`Redis Desktop Manager`,此时需要手动修改src/rdm.pro的配置
 
-用文本编辑器打开rdm.pro文件,找到debug: CONFIG-=app_bundle并注释他,在加入一下内容
+用文本编辑器打开rdm.pro文件,找到debug: CONFIG-=app_bundle并注释他,并加入以下内容
 ```
 #debug: CONFIG-=app_bundle
 
@@ -126,22 +126,22 @@ CONFIG -= debug
 再次执行编译，编译成功后,可以在bin/osx/release下找到`Redis Desktop Manager.app`
 
 #### 打包dmg
-为了更方便给别人使用我们将 app 打包成 dmg 安装包。在桌面新建一个文件夹，取名`rdm`吧，将app文件放进去。为了实现拖拽到Application的效果，需要在这个文件夹里放一个Application的替身。具体做法是cd到这个目录，建立一个软链接
+为了更方便给别人使用我们将 app 打包成 dmg 安装包。在桌面新建一个文件夹，取名**rdm**吧，将`Redis Desktop Manager.app`文件放进去。为了实现拖拽到Application的效果，需要在这个文件夹里放一个Application的替身。具体做法是cd到这个目录，建立一个软链接
 
 ```
 cd /Users/xxxxx/Desktop/rdm
 ln -s /Applications/  Applications
 ```
-接下来,用macos自带的磁盘工具打包成dmg安装包,打开`磁盘工具`选择文件-新建映像-来自文件夹的映像...,再选择桌面的rdm目录....
+接下来,用macos自带的`磁盘工具`打包成dmg安装包,打开`磁盘工具`,选择文件-新建映像-来自文件夹的映像...,再选择桌面的rdm目录,根据提示完成整个步骤.至此打包完成!!!
 
 ![](/images/posts/dev/rdm_dmg.png)
 
-至此打包完成!!!
+
 
 #### 其他问题
 
 ##### 关闭QuickStart弹框
-程序每次运行都会弹出更新和QuickStart弹框，为了解决该问题，直接找到对应文件(app.qml中)注释掉以下代码：
+程序每次运行都会弹出更新和QuickStart弹框，为了解决该问题，直接找到app.qml文件(源码的src/qml目录中)注释掉以下代码：
 ```
 Component.onCompleted: {
 
