添加网站备案号

--- a/_posts/技术开发/2019-11-12-mac_redis.md
+++ b/_posts/技术开发/2019-11-12-mac_redis.md
@@ -105,7 +105,7 @@ $ sudo chown $(whoami):admin /usr/local/Frameworks
 $ brew link python
 ```
 
-#### 启动 QT
+#### 启动QT编译RedisDesktopManager
 
 双击打开(刚git clone下来的redis客户端源码的src目录下)rdm.pro
 
@@ -125,6 +125,33 @@ CONFIG -= debug
 
 再次执行编译，编译成功后,可以在bin/osx/release下找到`Redis Desktop Manager.app`
 
+此时只能在本机运行,因为他依赖了本地的一些库，如QT库、Python等,如果想给别人是用需要将这些依赖库复制到 RedisDesktopManager.app/Contents/Frameworks的目录下，
+那么我们怎么知道用了那些库呢?qt给我们提供了一个方便的工具macdeployqt，操作如下：
+
+```
+/usr/local/Cellar/qt/5.13.2/bin/macdeployqt "Redis Desktop Manager.app" -qmldir=../../../src/qml
+```
+执行上面命令时，我这里报错
+
+```
+ERROR: no file at "/usr/local/opt/python/lib/Python.framework/Versions/3.7/Python"
+File exists, skip copy: "Redis Desktop Manager.app/Contents/PlugIns/quick/libqtquickcontrols2fusionstyleplugin.dylib"
+File exists, skip copy: "Redis Desktop Manager.app/Contents/PlugIns/quick/libqtquickcontrols2imaginestyleplugin.dylib"
+File exists, skip copy: "Redis Desktop Manager.app/Contents/PlugIns/quick/libqtquickcontrols2materialstyleplugin.dylib"
+File exists, skip copy: "Redis Desktop Manager.app/Contents/PlugIns/quick/libqtquickcontrols2universalstyleplugin.dylib"
+```
+
+后来发现我的python路径不同，路径为`/usr/local/opt/python/Frameworks/Python.framework/Versions/3.7/Python`,我是通过创建一个软连接解决
+
+```
+mkdir -p /usr/local/opt/python/lib/Python.framework/Versions/
+cd /usr/local/opt/python/lib/Python.framework/Versions/
+ln -s /usr/local/opt/python/Frameworks/Python.framework/Versions/3.7 3.7
+```
+
+右键 `Redis Desktop Manager.app`->显示包内容你会发现在Frameworks目录下多了好多内容。至此你就可以把这个应用给别人使用了
+
+
 #### 打包dmg
 为了更方便给别人使用我们将 app 打包成 dmg 安装包。在桌面新建一个文件夹，取名**rdm**吧，将`Redis Desktop Manager.app`文件放进去。为了实现拖拽到Application的效果，需要在这个文件夹里放一个Application的替身。具体做法是cd到这个目录，建立一个软链接
 
@@ -132,6 +159,7 @@ CONFIG -= debug
 cd /Users/xxxxx/Desktop/rdm
 ln -s /Applications/  Applications
 ```
+
 接下来,用macos自带的`磁盘工具`打包成dmg安装包,打开`磁盘工具`,选择文件-新建映像-来自文件夹的映像...,再选择桌面的rdm目录,根据提示完成整个步骤.至此打包完成!!!
 
 ![](/images/posts/dev/rdm_dmg.png)
