--- a/_posts/MacOS/2017-09-01-mac_skill.md
+++ b/_posts/MacOS/2017-09-01-mac_skill.md
@@ -25,7 +25,8 @@ sudo spctl --master-disable
 
 2. 打开应用程序-系统偏好设置-安全性和隐私-通用，消失的任何来源终于出现了（默认应该勾选了）；
 
-> 如果你不喜欢用终端输入命令的方式打开任何来源选项，你也可以通过另一种方法来打开第三方应用程序： 按住Control键并点按或右键点按该app的图标，点击打开即可出现“打开”选项，是不是也很方便？大家按照自己的喜欢选择这两种方法即可在macOS Sierra下打开第三方应用。
+> 如果你不喜欢用终端输入命令的方式打开任何来源选项，sudo xattr -d com.apple.quarantine /Applications/xxxxxx.app
+> 你也可以通过另一种方法来打开第三方应用程序： 按住Control键并点按或右键点按该app的图标，点击打开即可出现“打开”选项，是不是也很方便？大家按照自己的喜欢选择这两种方法即可在macOS Sierra下打开第三方应用。
 
 
 ### Mac OS X的升级或其他原因可能会导致ＭySQL启动或开机自动运行失败
