修改jquery为本地版本

--- a/_posts/2019-06-17-bat_skill.md
+++ b/_posts/2019-06-17-bat_skill.md
@@ -228,3 +228,43 @@ for /f "eol=. tokens=*" %%i in (a.txt) do echo %%i
 用eol来告诉for忽略以“.”开头的行。
 
 同样也必须加`tokens=*`，否则只会显示“第3行第1列” 
+
+
+
+### BAT备份mysql数据库(未测试)
+
+```
+rem ******MySQL backup start******
+@echo off
+
+forfiles /p "D:\Mysql_Backup" /m test_backup_*.sql -d -30 /c "cmd /c del /f @path"
+
+set "Ymd=%date:~0,4%%date:~5,2%%date:~8,2%0%time:~1,1%%time:~3,2%%time:~6,2%"
+mysqldump --opt --single-transaction=TRUE --user=root --password=123456 --host=127.0.0.1 --protocol=tcp --port=3306 --default-character-set=utf8 --single-transaction=TRUE --routines --events "test" > D:\Mysql_Backup\test_backup_%Ymd%.sql
+
+@echo on
+rem ******MySQL backup end******
+```
+
+- forfiles 为删除过期文件的命令，-d -30 删除30天的文件；
+- mysqldump 为MySQL提供的备份命令，该命令所在目录为MySQL安装目录下的bin文件夹中，此处直接使用该命令的前提是该命令所在bin文件夹已被设置为系统环境变量，如未设置，则要写全路径；
+- –user=root 为 MySQL 用户名；
+- –password=123456 为 MySQL 密码；
+- –host=127.0.0.1 为 MySQL 主机名；
+- “test” 为要备份的数据库的名称；
+- test_backup_%Ymd%.sql 是根据当前时间规则生成备份文件的名称。
+
+### BAT实现局域网内文件传输（未测试）
+
+前提条件：两台电脑在同一局域网，可以互相访问，接收复制文件的电脑，文件夹要设置共享。
+
+```
+net use  \\192.168.0.1 "password#" /user:"username"
+xcopy  test.sql \\192.168.0.1\temp\  /s/d/y 
+```
+
+* 192.168.0.1是接收文件的电脑ip，temp是设置了共享的文件夹。
+
+* password  远程连接密码  username  远程连接用户名
+
+* 把本机的test.sql文件，复制到192.168.0.1机器上的temp文件夹下。
